<resources>
    <string name="app_name">appletree</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="confirm">확인</string>
    <string name="complete">완료</string>
    <string name="continued">다음</string>
    <string name="cancel">취소</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="profile_name_1">Ali Connors</string>
    <string name="profile_image">Profile image</string>
    <string name="user_points">10,000 pts</string>
    <string name="user_rank">#1</string>
    <string name="rank">Rank</string>
    <string name="rank_1">#1</string>
    <string name="wins">Wins</string>
    <string name="wins_amount">42</string>
    <string name="losses">Losses</string>
    <string name="losses_amount">03</string>
    <string name="about">About</string>
    <string name="welcome">Welcome!</string>
    <string name="about_description">This sample showcases navigation using a Bottom Navigation
    View. The state and back stack of the three different screens are persisted.
    </string>
    <string name="done">Done</string>
    <string name="title_about">About</string>
    <string name="title_home">HOME</string>
    <string name="title_sell">SELL</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_list">Leaderboard</string>
    <string name="title_detail">Profile</string>
    <string name="cd_home">Home</string>
    <string name="cd_sell">Sell</string>
    <string name="cd_profile">Profile</string>
    <string name="k_recent">Recent</string>

    <string name="k_login">로그인</string>
    <string name="k_logout">로그아웃</string>
    <string name="k_sign_up">회원가입</string>
    
    <string name="Mac">Mac</string>
    <string name="iMac">iMac</string>
    <string name="iPhone">iPhone</string>
    <string name="Watch">Watch</string>
    <string name="iPad">iPad</string>
    <string name="Etc">Etc</string>

    <!-- 회원가입 -->
    <string name="k_email">이메일</string>
    <string name="k_email_hint">이메일을 입력해주세요.</string>
    <string name="k_email_cert">인증</string>
    <string name="k_cert_num">인증번호</string>
    <string name="k_cert_num_hint">인증번호 입력</string>
    <string name="k_remind">재전송</string>
    <string name="k_password">비밀번호</string>
    <string name="k_password_hint">비밀번호를 입력해주세요.</string>
    <string name="k_pw_confirm">비밀번호 확인</string>
    <string name="k_pw_confirm_hint">비밀번호를 확인해주세요.</string>
    <string name="k_phone_num">전화번호</string>
    <string name="k_phone_hint">전화번호를 입력해주세요.</string>
    <string name="k_nick_name">닉네임</string>
    <string name="k_nick_hint">닉네임을 입력해주세요.</string>

    <!-- 상품판매 -->
    <string name="k_sell_title">상품 등록</string>
    <string name="k_title_hint">제목</string>
    <string name="k_complete_write">작성 완료</string>
    <string name="k_content_hint">글을 작성해주세요.</string>
    <string name="k_fix_lower_price">고정 하한가</string>
    <string name="k_sell_price">즉시 판매가</string>
    <string name="k_close">닫기</string>
    <string name="k_next">다음</string>
    <string name="k_category_choice">카테고리 선택</string>
    <string name="k_sell_ex_title">※ 사진을 이렇게 찍어주세요 ※</string>
    <string name="k_sell_ex_1">1, [닉네임, 전화번호, 날짜 (YYMMDDHH), 난수] 순서를 잘 지켜주세요!</string>
    <string name="k_sell_ex_2">2. 제품 위에 정보가 적힌 메모지와 함께 밝은 장소에서 촬영 해주세요.</string>
    <string name="k_sell_ex_3">3. 올바르지 않은 정보 및 사진 인식 불가시 재촬영을 요구할 수 있습니다.</string>
    <string name="k_category_select_title">카테고리 선택</string>
    <string name="k_bidding">입찰하기</string>
    <string name="k_buy">구매하기</string>

    <!-- 온보딩 -->
    <string name="k_onboard_title">온보딩</string>
    <string name="k_onboard_ex_title">상품 확인을 위해\n상품사진과 함께 자신의 정보를 적은 메모지를\n준비해주세요</string>
    <string name="k_onboard_hint">다음화면에 촬영을 진행합니다.</string>
    <string name="k_onboard_ex_1">1. 상품과 메모지가 잘 보이도록 놓아주세요. 어두운 바닥에 놓으면 더 잘 인식합니다.</string>
    <string name="k_onboard_ex_2">2. 사진 영역에 맞추어 카테고리에 맞는 상품으로 촬영하세요.</string>
    <string name="k_onboard_ex_3">3. 빛 반사에 주의하세요. 정보 확인이 어렵거나 유효하지 않은 사진을 등록할 경우 재촬영을 요구할 수 있습니다.</string>
    <string name="k_onboard_ex_4">4. 제출시 주변 영역도 포함되니 촬영시 주의해주세요.</string>
    <string name="k_open_camera">카메라 실행</string>
    <string name="k_camera_title">상품 등록</string>
    <string name="k_camera_ex_1"><b>이메일, 닉네임, 날짜(YYMMDDHH), 난수</b> 순서를 잘 지켜주세요 !</string>
    <string name="k_camera_ex_2">제품 위에 정보가 적힌 메모지와 함께 밝은 장소에서 촬영해주세요.</string>
    <string name="k_camera_ex_3">올바르지 않은 정보, 및 사진 인식 불가시, 재촬영을 요구할 수 있어요.</string>


    <!-- 프로필 -->
    <string name="k_profile_title">프로필</string>
    <string name="k_nickname_tmp">닉네임</string>
    <string name="k_fix_profile">개인정보 수정</string>
    <string name="k_profile_phone_num">전화번호</string>
    <string name="k_profile_email">이메일</string>
    <string name="k_profile_tab_1">참여중인 경매 리스트</string>
    <string name="k_profile_tab_2">판매중인 상품 리스트</string>
    <string name="k_profile_tab_3">거래 성사 리스트</string>

    <!-- 검색 -->
    <string name="k_search_product">상품명 검색</string>

    <!-- 카메라 -->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[
            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.
        ]]>
    </string>



</resources>