<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_top_bar"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/shadow_top_bar">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k_onboard_title"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:fontFamily="@font/noto_sans_medium"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="@id/tv_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_first_ex_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ctl_top_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/iv_onboard">
            <TextView
                android:id="@+id/tv_ex_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/k_onboard_ex_title"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                android:fontFamily="@font/noto_sans_medium"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tv_ex_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/k_onboard_hint"
                android:textColor="@color/colorOffGray"
                android:textSize="12dp"
                android:fontFamily="@font/noto_sans_medium"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ex_1"
                android:layout_marginTop="3dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
            android:id="@+id/iv_onboard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/bg_onboard"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctl_first_ex_container"
            app:layout_constraintBottom_toTopOf="@id/ctl_second_ex_container"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_second_ex_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:paddingHorizontal="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_onboard"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/tv_ex_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k_onboard_ex_1"
                android:textColor="@color/colorBlack"
                android:textSize="12dp"
                android:fontFamily="@font/noto_sans_demilight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tv_ex_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k_onboard_ex_2"
                android:textColor="@color/colorBlack"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/noto_sans_demilight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ex_3"/>
            <TextView
                android:id="@+id/tv_ex_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k_onboard_ex_3"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                android:textSize="12dp"
                android:fontFamily="@font/noto_sans_demilight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ex_4"/>
            <TextView
                android:id="@+id/tv_ex_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/k_onboard_ex_4"
                android:textColor="@color/colorBlack"
                android:textSize="12dp"
                android:fontFamily="@font/noto_sans_demilight"
                app:layout_constraintStart_toStartOf="@id/tv_ex_3"
                app:layout_constraintTop_toBottomOf="@id/tv_ex_5"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_open_camera"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/k_open_camera"
                android:fontFamily="@font/noto_sans_medium"
                android:includeFontPadding="false"
                android:textSize="10dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ex_6"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>