<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_top_bar"
            android:layout_width="0dp"
            android:layout_height="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/shadow_top_bar">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k_sign_up"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:fontFamily="@font/noto_sans_medium"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="@id/tv_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctl_top_bar"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp">
                <LinearLayout
                    android:id="@+id/ll_email_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/k_email"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/noto_sans_medium"
                        android:includeFontPadding="false"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:hint="@string/k_email_hint"
                            android:fontFamily="@font/noto_sans_medium"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorBlack"
                            android:inputType="phone"
                            android:imeOptions="actionDone"
                            android:textSize="12dp"
                            android:backgroundTint="@color/colorGray"
                            android:textColorHint="@color/colorOffGray" />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_send_cert"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="20dp"
                            android:gravity="center"
                            android:text="@string/k_email_cert"
                            android:fontFamily="@font/noto_sans_medium"
                            android:includeFontPadding="false"
                            android:textSize="10dp"
                            android:textColor="@color/colorWhite"
                            android:background="@color/colorBlack"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_cert_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_email_container">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/k_cert_num"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/noto_sans_medium"
                        android:includeFontPadding="false"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/et_cert_num"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:hint="@string/k_cert_num_hint"
                            android:fontFamily="@font/noto_sans_medium"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorBlack"
                            android:inputType="phone"
                            android:imeOptions="actionDone"
                            android:textSize="12dp"
                            android:backgroundTint="@color/colorGray"
                            android:textColorHint="@color/colorOffGray" />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_cert_confirm"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="20dp"
                            android:gravity="center"
                            android:text="@string/confirm"
                            android:fontFamily="@font/noto_sans_medium"
                            android:includeFontPadding="false"
                            android:textSize="10dp"
                            android:textColor="@color/colorWhite"
                            android:background="@color/colorBlack"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_pw_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_cert_container">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/k_password"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/noto_sans_medium"
                        android:includeFontPadding="false"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/et_pw"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:hint="@string/k_password_hint"
                            android:fontFamily="@font/noto_sans_medium"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorBlack"
                            android:inputType="phone"
                            android:imeOptions="actionDone"
                            android:textSize="12dp"
                            android:backgroundTint="@color/colorGray"
                            android:textColorHint="@color/colorOffGray" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_pw_confirm_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_pw_container">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/k_pw_confirm"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/noto_sans_medium"
                        android:includeFontPadding="false"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/et_pw_confirm"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:hint="@string/k_pw_confirm_hint"
                            android:fontFamily="@font/noto_sans_medium"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorBlack"
                            android:inputType="phone"
                            android:imeOptions="actionDone"
                            android:textSize="12dp"
                            android:backgroundTint="@color/colorGray"
                            android:textColorHint="@color/colorOffGray" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_phone_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_pw_confirm_container">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/k_phone_num"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/noto_sans_medium"
                        android:includeFontPadding="false"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/et_phone"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:hint="@string/k_phone_hint"
                            android:fontFamily="@font/noto_sans_medium"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorBlack"
                            android:inputType="phone"
                            android:imeOptions="actionDone"
                            android:textSize="12dp"
                            android:backgroundTint="@color/colorGray"
                            android:textColorHint="@color/colorOffGray" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_nickname_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_phone_container">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/k_nick_name"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/noto_sans_medium"
                        android:includeFontPadding="false"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/et_nick"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:hint="@string/k_nick_hint"
                            android:fontFamily="@font/noto_sans_medium"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorBlack"
                            android:inputType="phone"
                            android:imeOptions="actionDone"
                            android:textSize="12dp"
                            android:backgroundTint="@color/colorGray"
                            android:textColorHint="@color/colorOffGray" />
                    </LinearLayout>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_complete"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/k_sign_up"
                    android:textSize="12dp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/noto_sans_medium"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_nickname_container"
                    android:background="@drawable/bg_rounded_button"
                    android:layout_marginTop="35dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>